objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Amount_required__c</fullName>
        <label>Amount Required</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApentencyScore1__c</fullName>
        <label>Apentency Score 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApentencyScore2__c</fullName>
        <label>Apentency Score 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApentencyScore3__c</fullName>
        <label>Apentency Score 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Member</label>
        <referenceTo>CampaignMember__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creation_POS_Id__c</fullName>
        <description>Creation POS unique Id; is used to populate the Store lookup Creation_Store__c.</description>
        <label>Creation POS Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Kanji__c</fullName>
        <label>Last Name Kanji</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nb_Other_Makeup__c</fullName>
        <label>Number of Products Other Makeup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_of_Purchases__c</fullName>
        <label>Nb of Purchases</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Expiring__c</fullName>
        <label>Loyalty Status Expiring</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Winparf_Id_Text__c</fullName>
        <label>Winparf Id Text</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_In_Progress__c</fullName>
        <formula>IF( Nb_Open_Case__c &gt;0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clients_Birthday__c</fullName>
        <formula>IF(
    MONTH(TODAY())= Birth_Month__c &amp;&amp; DAY(TODAY())= Birth_Day__c
    ,
    IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000000MfkD&amp;operationContext=CHATTER&amp;contentId=05T090000053S1R&quot;, &quot;Joyeux anniversaire&quot;, 30, 30)
    ,
    TEXT(Birth_Month__c) &amp;&quot;/&quot;&amp; TEXT(Birth_Day__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client&apos;s Birthday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Channel__c</fullName>
        <label>Creation Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Local Market</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>POS</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>Ecommerce</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>Customer service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name_Kanji__c</fullName>
        <label>First Name Kanji</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infoware_Id_Text__c</fullName>
        <label>Infoware Id Text</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Last_Sales_BC__c</fullName>
        <formula>IF( Last_Sale_s_BC__c = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Last Sales BC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_NPS_Score__c</fullName>
        <label>Survey NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechDataRecovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TechDataRecovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIC_Checked_date__c</fullName>
        <description>Technical filed used for Flow purpose</description>
        <label>VIC Checked date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attachment_POS_Id__c</fullName>
        <label>Attachment POS Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Pictogram__c</fullName>
        <formula>CASE(Market__c,
&quot;FR&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWGBg&quot;,&quot;France&quot;),
&quot;IT&quot;, IMAGE($CustomMetadata.Flag__mdt.IT.URL__c,&quot;Italia&quot;),
&quot;ES&quot;, IMAGE($CustomMetadata.Flag__mdt.ES.URL__c,&quot;Spain&quot;),
&quot;RU&quot;, IMAGE($CustomMetadata.Flag__mdt.RU.URL__c,&quot;Russia&quot;),
&quot;PT&quot;, IMAGE($CustomMetadata.Flag__mdt.PT.URL__c,&quot;Portugal&quot;),
&quot;GB&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWGXO&quot;,&quot;United Kingdom&quot;),
&quot;NL&quot;, IMAGE($CustomMetadata.Flag__mdt.NL.URL__c,&quot;Netherlands&quot;),
&quot;BE&quot;, IMAGE($CustomMetadata.Flag__mdt.BE.URL__c,&quot;Belgium&quot;),
&quot;GR&quot;, IMAGE($CustomMetadata.Flag__mdt.GR.URL__c,&quot;Greece&quot;),
&quot;PL&quot;, IMAGE($CustomMetadata.Flag__mdt.PL.URL__c,&quot;Poland&quot;),
&quot;SE&quot;, IMAGE($CustomMetadata.Flag__mdt.SE.URL__c,&quot;Sweden&quot;),
&quot;CH&quot;, IMAGE($CustomMetadata.Flag__mdt.CH.URL__c,&quot;Switzerland&quot;),
&quot;RO&quot;, IMAGE($CustomMetadata.Flag__mdt.RO.URL__c,&quot;Romania&quot;),
&quot;IE&quot;, IMAGE($CustomMetadata.Flag__mdt.IE.URL__c,&quot;Ireland&quot;),
&quot;DK&quot;, IMAGE($CustomMetadata.Flag__mdt.DK.URL__c,&quot;Denmark&quot;),
&quot;AT&quot;, IMAGE($CustomMetadata.Flag__mdt.AT.URL__c,&quot;Austria&quot;),
&quot;DE&quot;, IMAGE($CustomMetadata.Flag__mdt.DE.URL__c,&quot;Germany&quot;),
&quot;FI&quot;, IMAGE($CustomMetadata.Flag__mdt.FI.URL__c,&quot;Finland&quot;),
&quot;LU&quot;, IMAGE($CustomMetadata.Flag__mdt.LU.URL__c,&quot;Luxembourg&quot;),
&quot;CA&quot;, IMAGE($CustomMetadata.Flag__mdt.CA.URL__c,&quot;Canada&quot;),
&quot;US&quot;, IMAGE($CustomMetadata.Flag__mdt.US.URL__c,&quot;USA&quot;),
&quot;BR&quot;, IMAGE($CustomMetadata.Flag__mdt.BR.URL__c,&quot;Brazil&quot;),
&quot;AE&quot;, IMAGE($CustomMetadata.Flag__mdt.EA.URL__c,&quot;United Arab Emirates&quot;),
&quot;CN&quot;, IMAGE($CustomMetadata.Flag__mdt.CN.URL__c,&quot;China&quot;),
&quot;HK&quot;, IMAGE($CustomMetadata.Flag__mdt.HK.URL__c,&quot;Hong Kong&quot;),
&quot;KR&quot;, IMAGE($CustomMetadata.Flag__mdt.KR.URL__c,&quot;South Korea&quot;),
&quot;JP&quot;, IMAGE($CustomMetadata.Flag__mdt.JP.URL__c,&quot;Japan&quot;),
&quot;SG&quot;, IMAGE($CustomMetadata.Flag__mdt.SG.URL__c,&quot;Singapore&quot;),
&quot;TW&quot;, IMAGE($CustomMetadata.Flag__mdt.TW.URL__c,&quot;Taiwan&quot;),
&quot;ID&quot;, IMAGE($CustomMetadata.Flag__mdt.ID.URL__c,&quot;Indonesia&quot;),
&quot;MY&quot;, IMAGE($CustomMetadata.Flag__mdt.MY.URL__c,&quot;Malaysia&quot;),
&quot;NO&quot;, IMAGE($CustomMetadata.Flag__mdt.NO.URL__c,&quot;Norway&quot;),
&quot;AU&quot;, IMAGE($CustomMetadata.Flag__mdt.AU.URL__c,&quot;Australia&quot;),
&quot;CZ&quot;, IMAGE($CustomMetadata.Flag__mdt.CZ.URL__c,&quot;Czech Republic&quot;),
&quot;HU&quot;, IMAGE($CustomMetadata.Flag__mdt.HU.URL__c,&quot;Hungary&quot;),
&quot;SK&quot;, IMAGE($CustomMetadata.Flag__mdt.SK.URL__c,&quot;Slovakia&quot;),
&quot;INT&quot;, IMAGE($CustomMetadata.Flag__mdt.INT.URL__c,&quot;International&quot;),
IMAGE($CustomMetadata.Flag__mdt.INC.URL__c,&quot;Inconnu&quot;)
)</formula>
        <label>Country Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Typology__c</fullName>
        <defaultValue>&quot;Prospect&quot;</defaultValue>
        <label>Customer Typology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Churner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecommerce_Id_Text__c</fullName>
        <label>E-Commerce Id Text</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_Makeup_sessions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Makeup sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identity_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identity verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Store_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Store Survey</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Contacts (Last Store Survey)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modification_Date__c</fullName>
        <label>Modification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Turnover_Services__c</fullName>
        <label>Turnover Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnover_Skincare__c</fullName>
        <label>Turnover Skincare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIC_uncheked_date__c</fullName>
        <description>Technical field used for flow purpose</description>
        <label>VIC uncheked date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attachment_BC_Text__c</fullName>
        <description>Technical field containing Attachment BC&apos;s Id if Consumer inbound flow was unable to match the lookup with a related BC record.</description>
        <label>Attachment BC Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_User_Spent__c</fullName>
        <description>[Average User Spent] 
For ex , for GSA &gt; Calculated in One Base when there is a new Sale or on the 1st every month: average amount spent by a client per year (POS and ecommerce sales), minus returned products.</description>
        <inlineHelpText>Last 12M</inlineHelpText>
        <label>Average User Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <description>Not editable</description>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recipient_Adobe_ID__c</fullName>
        <label>Recipient Adobe ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Url__c</fullName>
        <label>Recommendation Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Technical_Field_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Field BC</label>
        <referenceTo>BC__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TemplateGreetingCN__c</fullName>
        <formula>IF(ISPICKVAL(Language__c,&quot;CN&quot;),
CASE(Salutation,
&apos;MS&apos;,&apos;&apos;,
&apos;MRS&apos;,&apos;亲爱的女士 &apos; + LastName + &apos;,&apos;,
&apos;MISS&apos;,&apos;亲爱的夫人 &apos; + LastName + &apos;,&apos;,
&apos;MR&apos;,&apos;亲爱的小姐 &apos; + LastName + &apos;,&apos;,
&apos;DR&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;亲爱的医生 &apos; + LastName + &apos;,&apos;,&apos;亲爱的博士 &apos; + LastName + &apos;,&apos;),
&apos;PROF&apos;,&apos;亲爱的教授 &apos; + LastName + &apos;,&apos;,
&apos;COMPANY&apos;,&apos;公司名称 &apos;,
&apos;LADY&apos;,&apos;亲爱的女士 &apos;,
&apos;LORD&apos;,&apos;亲爱的先生，&apos;,
&apos;SIR&apos;,&apos;亲爱的先生，&apos;,
&apos;DAME&apos;,&apos;亲爱的，&apos;,
&apos;PRINCE&apos;,&apos;亲爱的，&apos;,
&apos;PRINCESS&apos;,&apos;亲爱的，&apos;,
&apos;MR_AND_MS&apos;,&apos;亲爱的先生和夫人 &apos;+ LastName + &apos;,&apos;,
&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateGreetingCN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateGreetingDE__c</fullName>
        <formula>IF(ISPICKVAL(Language__c,&quot;DE&quot;),
CASE(Salutation,
&apos;MS&apos;,&apos;&apos;,
&apos;MRS&apos;,&apos;Sehr geehrte Frau &apos; + LastName + &apos;,&apos;,
&apos;MISS&apos;,&apos;Sehr geehrtes Fräulein &apos; + LastName + &apos;,&apos;,
&apos;MR&apos;,&apos;Sehr geehrter Herr &apos; + LastName + &apos;,&apos;,
&apos;DR&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;Sehr geehrter Herr Doktor &apos;+LastName +&apos;,&apos;,&apos;Sehr geehrte Frau Doktor &apos;+LastName+&apos;,&apos;),
&apos;PROF&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;Sehr geehrter Herr Professor &apos; + LastName + &apos;,&apos;,&apos;Sehr geehrte Frau Professor &apos; + LastName + &apos;,&apos;),
&apos;COMPANY&apos;,&apos;Unternehmen &apos; + Account.Name + &apos;,&apos;,
&apos;LADY&apos;,&apos;Sehr geehrte Frau,&apos;,
&apos;LORD&apos;,&apos;Sehr geehrter Herr,&apos;,
&apos;SIR&apos;,&apos;Sehr geehrte Frau,&apos;,
&apos;DAME&apos;,&apos;Sehr, &apos;,
&apos;PRINCE&apos;,&apos;Sehr,&apos;,
&apos;PRINCESS&apos;,&apos;Sehr, &apos;,
&apos;MR_AND_MS&apos;,&apos;Sehr, &apos;,
&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateGreetingDE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateGreetingES__c</fullName>
        <formula>IF(ISPICKVAL(Language__c,&quot;ES&quot;),
CASE(Salutation,
&apos;MS&apos;,&apos;&apos;,
&apos;MRS&apos;,&apos;Estimada Señora &apos; + LastName + &apos;,&apos;,
&apos;MISS&apos;,&apos;Estimada Señora &apos; + LastName + &apos;,&apos;,
&apos;MR&apos;,&apos;Estimado Señor &apos; + LastName + &apos;,&apos;,
&apos;DR&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;Estimada Doctora &apos; + LastName + &apos;,&apos;, &apos;Estimado Doctor &apos; + LastName + &apos;,&apos;),
&apos;PROF&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;Estimada Doctora &apos; + LastName + &apos;,&apos;,&apos;Estimado Doctor &apos; + LastName + &apos;,&apos;),
&apos;COMPANY&apos;,&apos;Empressa &apos; + Account.Name + &apos;,&apos;,
&apos;LADY&apos;,&apos;Estimada Señora &apos; + LastName + &apos;,&apos;,
&apos;LORD&apos;,&apos;Estimado Señor &apos; + LastName + &apos;,&apos;,
&apos;SIR&apos;,&apos;Estimado Señor &apos; + LastName + &apos;,&apos;,
&apos;DAME&apos;,&apos;Estimado, Estimada,&apos;,
&apos;PRINCE&apos;,&apos;Estimado, Estimada,&apos;,
&apos;PRINCESS&apos;,&apos;Estimado, Estimada,&apos;,
&apos;MR_AND_MS&apos;,&apos;Estimado, Estimada,&apos;,
&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateGreetingES</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateGreetingFr__c</fullName>
        <formula>IF(ISPICKVAL(Language__c,&quot;FR&quot;),
CASE(Salutation,
&apos;MS&apos;,&apos;Chère Madame &apos; + LastName +&apos;,&apos;,
&apos;MRS&apos;,&apos;Chère Madame &apos;  +  LastName +&apos;,&apos;,
&apos;MISS&apos;,&apos;Chère Mademoiselle &apos; + LastName+&apos;,&apos;,
&apos;MR&apos;,&apos;Cher Monsieur &apos;+ LastName +&apos;,&apos;,
&apos;DR&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;Chère Docteur,&apos;,&apos;Cher Docteur,&apos;),
&apos;PROF&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;Chère Madame &apos;+LastName+&apos;,&apos;,&apos;Cher Monsieur &apos;+ LastName + &apos;,&apos;),
&apos;COMPANY&apos;,&apos;Société &apos; + Account.Name + &apos;,&apos;,
&apos;LADY&apos;,&apos;Chère Madame,&apos;,
&apos;LORD&apos;,&apos;Cher Monsieur,&apos;,
&apos;SIR&apos;,&apos;Cher Monsieur,&apos;,
&apos;DAME&apos;,&apos;Cher, Chère,&apos;,
&apos;PRINCE&apos;,&apos;Cher, Chère,&apos;,
&apos;PRINCESS&apos;,&apos;Cher, Chère,&apos;,
&apos;MR_AND_MS&apos;,&apos;Cher, Chère,&apos;,
&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateGreetingFR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateGreetingGB__c</fullName>
        <formula>IF(ISPICKVAL(Language__c,&quot;EN&quot;) || ISPICKVAL(Language__c,&quot;US&quot;) || ISPICKVAL(Language__c,&quot;en_US&quot;) || ISPICKVAL(Language__c,&quot;ZF&quot;),
CASE(Salutation,
&apos;MS&apos;,&apos;Dear Ms &apos; + LastName + &apos;,&apos;,
&apos;MRS&apos;,&apos;Dear Mrs &apos; + LastName + &apos;,&apos;,
&apos;MISS&apos;,&apos;Dear Miss &apos; + LastName + &apos;,&apos;,
&apos;MR&apos;,&apos;Dear Mr &apos; + LastName + &apos;&apos;,
&apos;DR&apos;,&apos;Dear Doctor &apos; + LastName + &apos;,&apos;,
&apos;PROF&apos;,&apos;Dear Professor  &apos; + LastName + &apos;,&apos;,
&apos;COMPANY&apos;,Account.Name + &apos;,&apos;,
&apos;LADY&apos;,&apos;Dear Lady,&apos;,
&apos;LORD&apos;,&apos;Dear Sir,&apos;,
&apos;SIR&apos;,&apos;Dear Sir,&apos;,
&apos;DAME&apos;,&apos;Dear, &apos;,
&apos;PRINCE&apos;,&apos;Dear, &apos;,
&apos;PRINCESS&apos;,&apos;Dear, &apos;,
&apos;MR_AND_MS&apos;,&apos;Dear Mr. and Mrs &apos; + LastName + &apos;,&apos;,
&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateGreetingGB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateGreetingIT__c</fullName>
        <formula>IF(ISPICKVAL(Language__c,&quot;IT&quot;),
CASE(Salutation,
&apos;MS&apos;,&apos;&apos;,
&apos;MRS&apos;,&apos;Gentile Signora &apos; + LastName + &apos;,&apos;,
&apos;MISS&apos;,&apos;Gentile Signorina &apos; + LastName + &apos;,&apos;,
&apos;MR&apos;,&apos;Gentile Signor &apos; + LastName + &apos;,&apos;,
&apos;DR&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;Gentile Dottoressa &apos; + LastName + &apos;,&apos;,&apos;Gentile Dottor &apos; + LastName + &apos;,&apos;),
&apos;PROF&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;Gentile Professoressa &apos; + LastName + &apos;,&apos;, &apos;Gentile Professore &apos; + LastName + &apos;,&apos;),
&apos;COMPANY&apos;,&apos;Impressa &apos; + Account.Name +&apos;,&apos;,
&apos;LADY&apos;,&apos;Gentile Signora &apos; + LastName + &apos;,&apos;,
&apos;LORD&apos;,&apos;Gentile Signor &apos; + LastName + &apos;,&apos;,
&apos;SIR&apos;,&apos;Gentile Signor &apos; + LastName + &apos;,&apos;,
&apos;DAME&apos;,&apos;Gentile, &apos;,
&apos;PRINCE&apos;,&apos;Gentile,&apos;,
&apos;PRINCESS&apos;,&apos;Gentile,&apos;,
&apos;MR_AND_MS&apos;,&apos;Gentile,&apos;,
&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateGreetingIT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateGreetingJP__c</fullName>
        <formula>IF(AND(OR(ISPICKVAL(Language__c,&quot;JP&quot;), ISPICKVAL(Market__c, &quot;JP&quot;)), ISPICKVAL(Salutation, &apos;COMPANY&apos;)), FirstName + &apos; &apos; + LastName + &apos; &apos; + &apos;御中&apos;,
IF(AND(OR(ISPICKVAL(Language__c,&quot;JP&quot;), ISPICKVAL(Market__c, &quot;JP&quot;)), NOT(ISPICKVAL(Salutation, &apos;COMPANY&apos;))),  Last_Name_Kanji__c + &apos; &apos; + &apos;様&apos;,
&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateGreetingJP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateGreetingNL__c</fullName>
        <formula>IF(ISPICKVAL(Language__c,&quot;NL&quot;),
CASE(Salutation,
&apos;MS&apos;,&apos;&apos;,
&apos;MRS&apos;,&apos;Geachte Mevrouw &apos; + LastName + &apos;,&apos;,
&apos;MISS&apos;,&apos;Geachte Juffrouw &apos; + LastName + &apos;,&apos;,
&apos;MR&apos;,&apos;Geachte Heer &apos; + LastName + &apos;,&apos;,
&apos;DR&apos;,&apos;Geachte Doctor &apos; + LastName + &apos;,&apos;,
&apos;PROF&apos;,&apos;Geachte Professor + Last, name&apos;,
&apos;COMPANY&apos;,&apos;Bedrijf &apos; + Account.Name+&apos;,&apos;,
&apos;LADY&apos;,&apos;Geachte Mevrouw &apos; + LastName + &apos;,&apos;,
&apos;LORD&apos;,&apos;Geachte Heer &apos; + LastName + &apos;,&apos;,
&apos;SIR&apos;,&apos;Geachte Heer &apos; + LastName + &apos;,&apos;,
&apos;DAME&apos;,&apos;Geachte,&apos;,
&apos;PRINCE&apos;,&apos;Geachte,&apos;,
&apos;PRINCESS&apos;,&apos;Geachte,&apos;,
&apos;MR_AND_MS&apos;,&apos;Geachte,&apos;,
&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateGreetingNL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateGreetingPT__c</fullName>
        <formula>IF(ISPICKVAL(Language__c,&quot;PT&quot;),
CASE(Salutation,
&apos;MS&apos;,&apos;&apos;,
&apos;MRS&apos;,&apos;Estimada Senhora &apos; + LastName + &apos;,&apos;,
&apos;MISS&apos;,&apos;Estimada Senhora &apos; + LastName + &apos;,&apos;,
&apos;MR&apos;,&apos;Estimado Senhor &apos; + LastName + &apos;,&apos;,
&apos;DR&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;Estimada Senhora Doutora &apos; + LastName + &apos;,&apos;,&apos;Estimado Senhor Doutor &apos; + LastName + &apos;, &apos;),
&apos;PROF&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;Estimada Senhora Professora &apos; + LastName + &apos;,&apos;,&apos;Estimado Senhor Professor &apos; + LastName + &apos;,&apos;),
&apos;COMPANY&apos;,&apos;Empresa &apos;+ Account.Name +&apos;,&apos;,
&apos;LADY&apos;,&apos;Estimada Senhora &apos; + LastName + &apos;,&apos;,
&apos;LORD&apos;,&apos;Estimado Senhor &apos; + LastName + &apos;,&apos;,
&apos;SIR&apos;,&apos;Estimado Senhor &apos; + LastName + &apos;,&apos;,
&apos;DAME&apos;,&apos;Estimado, Estimada,&apos;,
&apos;PRINCE&apos;,&apos;Estimado, Estimada,&apos;,
&apos;PRINCESS&apos;,&apos;Estimado, Estimada,&apos;,
&apos;MR_AND_MS&apos;,&apos;Estimado, Estimada,&apos;,
&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateGreetingPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateGreetingRU__c</fullName>
        <formula>IF(ISPICKVAL(Language__c,&quot;RU&quot;),
CASE(Salutation,
&apos;MS&apos;,&apos;&apos;,
&apos;MRS&apos;,&apos;Уважаемая &apos; + FirstName + &apos;,&apos;,
&apos;MISS&apos;,&apos;Уважаемая &apos; + FirstName + &apos;,&apos;,
&apos;MR&apos;,&apos;Уважаемый &apos; + FirstName + &apos;,&apos;,
&apos;DR&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;Уважаемая Госпожа &apos; + LastName + &apos;,&apos;,&apos;Уважаемый Господин &apos; + LastName + &apos;,&apos;),
&apos;PROF&apos;,IF(ISPIcKVAL( Gender__c ,&quot;FEMALE&quot;),&apos;важаемая Госпожа &apos; + LastName + &apos;,&apos;,&apos;Уважаемый Господин &apos; + LastName + &apos;,&apos;),
&apos;COMPANY&apos;,&apos;компания,&apos;,
&apos;LADY&apos;,&apos;Уважаемая &apos; + FirstName + &apos;,&apos;,
&apos;LORD&apos;,&apos;Уважаемый &apos; + FirstName + &apos;,&apos;,
&apos;SIR&apos;,&apos;Уважаемый &apos; + FirstName + &apos;,&apos;,
&apos;DAME&apos;,&apos;NA&apos;,
&apos;PRINCE&apos;,&apos;NA&apos;,
&apos;PRINCESS&apos;,&apos;NA&apos;,
&apos;MR_AND_MS&apos;,&apos;NA&apos;,
&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateGreetingRU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turnover_Fragrance__c</fullName>
        <label>Turnover Fragrance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_Skincare_sessions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skincare sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Contacted_Date__c</fullName>
        <description>Last contact date whatever the channel (Clienteling, customer care, marketing campaign in Adobe, satisfaction survey)</description>
        <formula>IF(
				AND(
								 ISBLANK(Last_Case_Date__c ),
							  ISBLANK(Last_Contact_Date_NPS__c ),
								 ISBLANK(Last_Contact_Date_Marketing__c),
								 ISBLANK(Last_Activity_Date__c )
								),
				NULL,
				 NOW() -  MIN(
     NOW() -  BLANKVALUE(Last_Case_Date__c, DATETIMEVALUE(&quot;1900-01-01 12:00:00&quot;)),
					NOW() -  BLANKVALUE(Last_Contact_Date_NPS__c, DATETIMEVALUE(&quot;1900-01-01 12:00:00&quot;)),
					NOW() -  BLANKVALUE(Last_Contact_Date_Marketing__c, DATETIMEVALUE(&quot;1900-01-01 12:00:00&quot;)),
					NOW() -  BLANKVALUE(Last_Activity_Date__c, DATETIMEVALUE(&quot;1900-01-01 12:00:00&quot;))
					)
				 )</formula>
        <label>Last Contacted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nb_Premium_Skincare__c</fullName>
        <label>Number of Products Premium Skincare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_in_SMS_Validity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Validity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecommendedProduct1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Product 1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecommendedProduct2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Product 2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contacts (Recommended Product 2)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecommendedProduct3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Product 3</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contacts (Recommended Product 3)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Turnover_Foundation__c</fullName>
        <label>Turnover Foundation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Winparf_Id_External__c</fullName>
        <externalId>true</externalId>
        <label>Winparf Id External</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BirthdateConcatenate__c</fullName>
        <formula>IF( (NOT(Birth_Year__c=0)),
TEXT(Birth_Day__c) &amp;&quot;/&quot;&amp; TEXT(Birth_Month__c) &amp;&quot;/&quot;&amp; TEXT(Birth_Year__c),
			TEXT(Birth_Day__c) &amp;&quot;/&quot;&amp; TEXT(Birth_Month__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthdate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Sub_Channel__c</fullName>
        <label>Creation Sub Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_Fragrance_sessions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fragrance sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infoware_Id_External__c</fullName>
        <externalId>true</externalId>
        <label>Infoware Id External</label>
        <length>70</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Modification_Channel__c</fullName>
        <label>Modification Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>SCPCD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommendation_Level__c</fullName>
        <label>Recommendation Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Promotor</fullName>
                    <label>Image promotor</label>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Turnover_Accessories__c</fullName>
        <label>Turnover Accessories</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cosmetovigilance_Case__c</fullName>
        <label>Cosmetovigilance Case/s</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>⭐️</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cosmetovigilance_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cosmetovigilance Form</label>
        <referenceTo>Cosmetovigilance_Form__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ecommerce_Id_External__c</fullName>
        <label>E-Commerce Id External</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date_NPS__c</fullName>
        <description>Not editable</description>
        <label>Last Contact Date NPS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Transaction_Date__c</fullName>
        <label>Last Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loyalty_Charms_Points__c</fullName>
        <description>Number of Charms in the new loyalty program / although not a key indicator for BCs</description>
        <label>Loyalty Charms Points</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_in_Email_Validity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Validity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_in_Phone_Validity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Validity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Turnover_Other_Makeup__c</fullName>
        <label>Turnover Other Makeup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Transaction_Date__c</fullName>
        <label>First Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nb_of_Transactions_12M__c</fullName>
        <description>For ex , for GSA &gt; Calculated in One Base when there is a new Sale or on the 1st every month: nb of commerce and POS sales on the last 12 rolling months, with amount &gt; 0.</description>
        <inlineHelpText>Last 12M</inlineHelpText>
        <label>Nb of Transactions 12M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>